# mimalloc3-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
libmimalloc3-sys/: Cargo.toml  build.rs
libmimalloc3-sys/src/: lib.rs
src/: lib.rs
tests/: test-api.rs
