[package]
name = "mimalloc3-rs"
version = "0.0.2"
edition = "2024"
authors = ["Andrew Ares <coopersjy@gmail.com>"]
repository = "https://github.com/TENX-S/mimalloc3-rs"
keywords = ["mimalloc", "allocator", "encrypted-heap", "performance"]
categories = ["memory-management", "api-bindings"]
description = "mimalloc is a compact general purpose allocator with excellent performance."
license-file = "LICENSE"
readme = "README.md"

[dependencies]
libmimalloc3-sys = { path = "libmimalloc3-sys", version = "3.1.6-dev0" }

[workspace]
members = ["libmimalloc3-sys"]

[features]
default = []
static = ["libmimalloc3-sys/static"]
shared = ["libmimalloc3-sys/shared"]
secure= ["libmimalloc3-sys/secure"]
debug-full = ["libmimalloc3-sys/debug-full"]
padding = ["libmimalloc3-sys/padding"]
override = ["libmimalloc3-sys/override"]
xmalloc = ["libmimalloc3-sys/xmalloc"]
show_errors = ["libmimalloc3-sys/show_errors"]
guarded = ["libmimalloc3-sys/guarded"]
use_cxx = ["libmimalloc3-sys/use_cxx"]
opt_arch = ["libmimalloc3-sys/opt_arch"]
opt_simd = ["libmimalloc3-sys/opt_simd"]
see_asm = ["libmimalloc3-sys/see_asm"]
win_redirect = ["libmimalloc3-sys/win_redirect"]
win_use_fixed_tls = ["libmimalloc3-sys/win_use_fixed_tls"]
local_dynamic_tls = ["libmimalloc3-sys/local_dynamic_tls"]
debug_asan = ["libmimalloc3-sys/debug_asan"]
debug_ubsan = ["libmimalloc3-sys/debug_ubsan"]
track_valgrind = ["libmimalloc3-sys/track_valgrind"]
track_asan = ["libmimalloc3-sys/track_asan"]
track_etw = ["libmimalloc3-sys/track_etw"]
build_object = ["libmimalloc3-sys/build_object"]
build_test = ["libmimalloc3-sys/build_tests"]
skip_collect_on_exit = ["libmimalloc3-sys/skip_collect_on_exit"]
no_padding = ["libmimalloc3-sys/no_padding"]
no_thp = ["libmimalloc3-sys/no_thp"]
